# freelancer-analysis-agent

./: .env.example  README.md  REPORT.md  pyproject.toml
src/freelancer_analysis_agent/: main.py
